<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperMap</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="pref_debug">Debug mode</string>
    <string name="pref_debug_summary">This is just a dummy preference</string>
    <string name="pref_debug_level">Debug Level</string>
    <string name="pref_debug_level_default">DEBUG</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_title">About</string>
    <string name="about_text">This is a demo app with a lot of useful demo code.\n\n(c) 2014 - Roberto Fonti\nroberto.fonti@gmail.com</string>
    <string name="map_updating">Updating...</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="dialog_welcome">Welcome to San Francisco.\n\nReady to see Muni vehicles moving?</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_section_four_characters_map">Tracking Map</string>
    <string name="title_section_sf_map">San Francisco Map</string>
    <string name="pref_sf_clusters">Cluster Vehicles</string>
    <string name="pref_sf_landmarks">Show Landmarks</string>
    <string name="pref_sf_map_category">San Francisco Map</string>
    <string name="sf_api_fail">Error Loading Data</string>
    <string name="sf_vehicles">vehicles</string>
    <string name="sf_loading">loading...</string>
    <string name="pref_4char_map_category">Tracking Map</string>
    <string name="pref_tracking_map_category">Tracking Map</string>
    <string name="pref_geocoding">Geocoding Service</string>
    <string name="pref_geocoding_default">google_maps</string>
    <string name="title_section_tracking_map">Tracking Map</string>

</resources>
