<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_debug"
        android:title="@string/pref_debug"
        android:summary="@string/pref_debug_summary"
        android:defaultValue="true" />
    <ListPreference
        android:dependency="pref_debug"
        android:key="pref_debug_level"
        android:title="@string/pref_debug_level"
        android:dialogTitle="@string/pref_debug_level"
        android:entries="@array/pref_debug_levels_entries"
        android:entryValues="@array/pref_debug_levels_values"
        android:defaultValue="@string/pref_debug_level_default" />

    <PreferenceCategory android:title="@string/pref_sf_map_category">

        <CheckBoxPreference android:key="pref_sf_landmarks"
            android:title="@string/pref_sf_landmarks"
            android:defaultValue="false"/>

        <CheckBoxPreference android:key="pref_sf_cluster"
            android:title="@string/pref_sf_clusters"
            android:defaultValue="false"/>


    </PreferenceCategory>

</PreferenceScreen>